...

fun generateFakeCardPan() =
    "${arrayOf(20, 40, 50, 60, 65).random()}${(10000000000000..99999999999999).random()}"


object RobinTestTags {
    const val ERROR_RESOLVE_BUTTON = "ErrorButton"
    const val ERROR_TITLE = "ErrorTitle"
    const val ERROR_MESSAGE = "ErrorMessage"
    const val ERROR_VISUALS = "ErrorVisuals"
    const val LOADING = "Loading"
    const val SUMMARY = "Summary"
    const val SUMMARY_CHECKOUT_BUTTON = "SummaryCheckoutButton"
}

