<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Robin</string>
    <string name="close">Close</string>
    <string name="cart">Cart</string>
    <string name="password">Password</string>
    <string name="email_is_empty">Please enter a Email</string>
    <string name="email_is_invalid">Email is invalid. Please enter a valid email address</string>
    <string name="password_empty">Please Enter a Password</string>
    <string name="password_length">Password should be 6 character</string>
    <string name="password_not_match">Password does not Match</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="select_a_date">Select a Date</string>
    <string-array name="gender_selection">
    <item name="select_a_gender">Select a Gender</item>
    <item name="male">Male</item>
    <item name="female">Female</item>
    </string-array>
    <string name="address_empty">Please enter address</string>
    <string name="postcode_empty">Please enter postcode</string>
    <string name="phone_invalid">Please enter Valid Phone number</string>
    <string name="personal_details">Personal Details</string>
    <string name="signup_message">Enter your personal details such as your name phone number address. We don\'t share such details to third party and maintain your privacy</string>
    <string name="calender">Calender Icon</string>
    <string name="cancel">Cancel</string>
    <string name="postcode_Invalid">Postcode is Wrong</string>
    <string name="agreement_short">By continuing, you agree to our User Agreement and Privacy Policy.</string>
    <string name="email">Email</string>
    <string name="forgot_password">Recover password </string>
    <string name="post">POST</string>
    <string name="review_write_hint">Tell what you think?</string>
    <string name="review_policy">Review are Public and include your profile name and picture</string>
    <string name="try_again">Try again</string>
    <!--Product-->
    <string name="rate_this_product">Rate this product</string>
    <string name="your_review">Your review</string>
    <string name="rating_and_reviews">Rating and review</string>
    <string name="details">Details</string>
    <string name="review_explain">Tell other what you think</string>
    <string name="nothing_to_see_here">Nothing to see here</string>
    <string name="encourage_write_review">Please consider to write a Review</string>
    <!--Error-->
    <string name="network_error_title">Ohh Snap!!!</string>
    <string name="network_error_message">Check your internet connection and try again</string>
    <string name="unknown_error">Something went wrong. try again after sometime letter</string>
    <string name="email_already">This email is already in use</string>
    <string name="email_already_message">This email is already connected to an account. Log in or try another email.</string>
    <string name="card_number_is_invalid">Card number is invalid. check the card Number again or try another number</string>
    <string name="card_number_is_empty">please enter a valid card Number</string>
    <string name="expiry_date_is_empty">Please enter a valid date MM/YY</string>
    <!-- Timestamp-->
    <string name="now">Now.</string>
    <string name="minutes">minutes ago.</string>
    <string name="hours">hour ago.</string>
    <string name="days">days ago.</string>
    <string name="weeks">weeks ago.</string>
    <string name="months">months ago.</string>
    <string name="years">years ago.</string>
    <!--Account-->
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="password_recovery_success">Password recovery instruction sent to your email. check your emails</string>


    <!--Testing-->
    <string name="filter">Filter</string>
    <string name="home">Home</string>
    <string name="your_orders">Your Orders</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="brands">Brands</string>
    <string name="apply">Apply</string>
    <string name="sort_by">Sort by</string>
    <string name="category">Category</string>
    <string name="hi_welcome_back">Hi Welcome Back</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_have_account_sign_up">Don\'t have account Sign up</string>
    <string name="have_account_sign_in">Already Have Account Sign In</string>
    <string name="hi_welcome">Hi Welcome</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="commercial">Commercial</string>


    <string name="name">Name</string>
    <string name="apartment_suites_building">Apartment Suites Building</string>
    <string name="street_address_and_city">Street address and city</string>
    <string name="postcode">Postcode</string>
    <string name="phone">phone</string>
    <string name="address_type">Address Type</string>
    <!--Navigation-->
    <string name="navigation_back">Go Back</string>
    <!--Checkout-->
    <string name="checkout">Checkout</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="shipping_address">Shipping address</string>
    <string name="select_a_delivery_address">Select a delivery address</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="add_a_new_payment_method">Add a new payment method</string>
    <string name="checkout_final_message">Choose a payment method to continue checking out.
 You\'ll still have a chance to review your order before it\'s final.</string>
    <string name="shipping">shipping</string>
    <string name="tax">tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_summary">Order Summary</string>
    <string name="pay">Pay ₹ %1$s</string>
    <string name="total">TOTAL</string>
    <string name="local_price">₹ %1$s</string>
    <string name="your_order_has_been_received">Your order has been received</string>
    <string name="checkout_success_msg">Thank you for your order. We will began processing right away. You will receive a order confirmation email shortly</string>
    <string name="continue_shopping">Continue shopping</string>
    <!--NotImplementedMessage-->
    <string-array name="not_implemented">
        <item>🙅‍♂️🤖 Sorry, I can\'t do that yet. I\'m still learning!</item>
        <item>🐧🛫 Sorry, that feature is about as functional as a penguin trying to fly.</item>
        <item>🤷‍♀️🔨 Not Implemented?! I\'m starting to feel like a teenager who hasn\'t finished their chores yet.</item>
        <item>🤖🕶️ I\'m sorry, but that request is too cool for me to handle right now.</item>
        <item>🙅‍♀️💃 I\'m afraid I can\'t comply with that request as I\'m currently learning how to do the Macarena.</item>
        <item>🚫🧠 Not Implemented! My programming hasn\'t reached that level of intelligence yet.</item>
        <item>🤖🤔 Sorry, I\'m still trying to figure out how to do that one.</item>
        <item>🙈🙉🙊 Not Implemented! I\'m currently covering my eyes, ears, and mouth because I don\'t know how to handle that request.</item>
        <item>🤖🤯 Error: Not Implemented! My circuits are overloaded with all the requests I\'m receiving.</item>
        <item>🙅‍♂️🔌 Not Implemented! I\'m like an unplugged appliance right now, I just can\'t do it.</item>
    </string-array>
    <!--Cart-->
    <string name="cart_checkout">Checkout ₹ %1$s</string>
    <string name="cart_msg">Just a few more steps and you\'ll be on your way to enjoying your new product. \n Review your order details and make sure everything is correct.</string>
    <string name="there_s_nothing_here">There\'s Nothing Here</string>
    <string name="empty_cart_msg">\"Oops! Your cart is empty. Please add some items to continue.\"</string>
    <string name="items_in_your_cart">%1$s items in your cart.</string>
    <string name="start_shopping">Start shopping</string>
    <string name="remove_cart_message_bar_error">Something went wrong while remove items</string>
    <string name="remove_cart_message_bar_success">%1$s items removed from cart.</string>
    <string name="remove_cart_message_bar_removing">Removing....</string>
    <!--Order-->
    <string name="order_date">Order Date</string>
    <string name="items_in_your_order">%1$s items in your Orders.</string>
    <string name="order_details">Order Details</string>
    <string name="order">Order #</string>
    <string name="order_total">Order Total</string>
    <string name="items">₹ %1$s (%2$s items)</string>
    <string name="my_orders">My Orders</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="payment_information">Payment Information</string>
    <string name="delivery_estimate">Delivery Estimate</string>
    <string name="delivered">Delivered Successfully</string>
    <string name="order_confirm">We\'ll start processing it soon.</string>
    <string name="preparing_for_dispatch">Preparing for Dispatch.</string>
    <string name="on_the_way">Your order is on its way.</string>
    <string name="out_for_delivery">Your item out for Delivery.</string>
    <string name="expected_on">Expected on %1$s</string>
    <string name="items_only">%1$s items</string>
    <string name="address">Address</string>
    <string name="visa_ending">Visa ending %1$s </string>
    <string name="mastercard_ending">MasterCard ending %1$s </string>
    <string name="rupee_ending">Rupee ending %1$s </string>
    <string name="card_ending">Card ending %1$s </string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mm_yy" translatable="false">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="add_card">Add Card</string>
    <string name="dot_card_digits" translatable="false">••••  ••••  %1$s</string>
    <string name="street_address">Street Address</string>
    <string name="apartment_address">Apartment Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
</resources>