...
                Text(stringResource(R.string.start_shopping))
            }
        )
    }
}
object CartTestTags{
    const val BACK_BUTTON="BackButton"
    const val EMPTY_CART_ANIMATED_ILLUSTRATE="EmptyCartAnimation"
    const val REMOVE_BUTTON="RemoveButton"
    const val TAG="CartCompose"
}

@Preview
@Composable
...
